...
		case religion(AttributesContent)
		case figure(AttributesContent)
		case maritalStatus(AttributesContent)
		case height(TextContent, isEnabled: Bool)
		case occupation(TextContent)
		case aboutMe(TextContent)
		case doneButton(TextContent)
	}
    
    private enum Constants {
        static let pictureButtonSize = CGSize(width: 70, height: 70)
        static let singleLineFiledHeight: CGFloat = 50.0
        static let singleChoiceButtonHeight: CGFloat = 50.0
...
    private let contentView: UIView = {
        let view = UIView()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.backgroundColor = .white
        return view
    }()
    private let pictureButton: UserProfilePictureButton = {
		let button = UserProfilePictureButton(target: self, action: #selector(buttonDidTap), ai: "pictureButton")
        button.layer.cornerRadius = Constants.pictureButtonSize.width * 0.5
        
        return button
    }()
    private let anotherPictureButton: UserProfilePictureButton = {
...
    private let pictureSwitch: UISwitch = {
       let sw = UISwitch()
        sw.translatesAutoresizingMaskIntoConstraints = false
        sw.addTarget(self, action: #selector(buttonDidTap), for: .valueChanged)
        return sw
    }()
	private lazy var displayNameField = UserProfileTextField(delegate: self, ai: "displayNameField")
    private lazy var realNameField = UserProfileTextField(delegate: self, ai: "realNameField")
    private lazy var locationField = UserProfileLocationField(delegate: self, ai: "locationField")
    private lazy var bDayButton = UserProfileDateButton(target: self, action: #selector(buttonDidTap), ai: "bDayButton")
	private lazy var genderButton = UserProfileAttributesButton(target: self, action: #selector(buttonDidTap), ai: "genderButton")
    private lazy var maritalStatusButton = UserProfileAttributesButton(target: self, action: #selector(buttonDidTap), ai: "maritalStatusButton")
    private lazy var ethnicityButton = UserProfileAttributesButton(target: self, action: #selector(buttonDidTap), ai: "ethnicityButton")
    private lazy var religionButton = UserProfileAttributesButton(target: self, action: #selector(buttonDidTap), ai: "religionButton")
    private lazy var figureButton = UserProfileAttributesButton(target: self, action: #selector(buttonDidTap), ai: "figureButton")
    private lazy var heightSlider: UISlider = {
       let slider = UISlider()
        slider.translatesAutoresizingMaskIntoConstraints = false
...
