...
    func setupButtons(register: RootButtonModel, changeProfile: RootButtonModel)
}

final class RootViewController: UIViewController {
    
    private let viewModel: RootViewModel
	private lazy var registerButton: UIButton = {
		let button = UIButton(type: .custom)
		button.translatesAutoresizingMaskIntoConstraints = false
		button.titleLabel?.numberOfLines = 0
		button.titleLabel?.textAlignment = .center
		button.addTarget(self, action: #selector(registerButtonDidTap), for: .touchUpInside)
		button.backgroundColor = UIColor.random
		button.accessibilityIdentifier = "registerButton"
		return button
	}()
	private lazy var changeProfileButton: UIButton = {
		let button = UIButton(type: .custom)
		button.translatesAutoresizingMaskIntoConstraints = false
		button.titleLabel?.numberOfLines = 0
		button.titleLabel?.textAlignment = .center
		button.addTarget(self, action: #selector(changeProfileButtonDidTap), for: .touchUpInside)
		button.backgroundColor = UIColor.random
...
