...
	private lazy var datePicker: UIDatePicker = {
		let datePicker = UIDatePicker()
		datePicker.translatesAutoresizingMaskIntoConstraints = false
		datePicker.datePickerMode = .date
		return datePicker
	}()
	private lazy var datePickerDoneButton: UIButton = {
		let button = UIButton(type: .custom)
		button.setTitle("Choose date", for: .normal)
		button.layer.borderWidth = 0.5
		button.translatesAutoresizingMaskIntoConstraints = false
		button.addTarget(self, action: #selector(datePickerDoneDidTap), for: .touchUpInside)
		button.accessibilityIdentifier = "datePickerDoneButton"
...
			assertionFailure("Coulnd not find choice")
			return cell
		}

		cell.backgroundColor = tableView.backgroundColor
		cell.textLabel?.text = choice.title
		cell.accessibilityIdentifier = "SingleChoicePickerViewCell"
		return cell
	}
}

extension SingleChoicePickerView: UITableViewDelegate {
	
...
